added draft content to index.html

--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>Portfolio</title>
-</head>
-
-<body>
-	<h1>hi!</h1>
-</body>
-
-
+	<head>
+		<title>LSG</title>
+	</head>
+	<body>
+		<h1>Lost Student Guide</h1>
+		<h2>Welcome to the Lost Student Guide!</h2>
+		<p>There are two universities situated Belfast. Many students are new to the area and might be feeling a little lost. Have no fear, we at the lost student guide are hear to help! We have selected a few locations that students might want to know about.</p>
+		<p>If there is something that you looking for more information on, or maybe you are feeling a little lost, you can get in touch with us <a href="/html/contact.html">here</a> or via our <a>twitter: @lostStudentGuide</a></p>
+	</body>
 </html>
