created pages and added draft content

--- a/html/guideSections/tourismSpots.html
+++ b/html/guideSections/tourismSpots.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Contact</title>
+    <title>Tourism</title>
 </head>
 <body>
-<h1>Contact</h1>
+    <h1>Tourism</h1>
 </body>
 </html>
