--- a/html/help.html
+++ b/html/help.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Contact</title>
+    <title>Help</title>
 </head>
 <body>
-<h1>Contact</h1>
+    <h1>Help</h1>
 </body>
 </html>
