--- a/html/guideSections/nightlife.html
+++ b/html/guideSections/nightlife.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Contact</title>
+    <title>Nightlife</title>
 </head>
 <body>
-<h1>Contact</h1>
+    <h1>Nightlife</h1>
 </body>
 </html>
