draft help page content

--- a/html/help.html
+++ b/html/help.html
@@ -5,5 +5,12 @@
 </head>
 <body>
     <h1>Help</h1>
+    <p>Starting university and moving away from home can be daunting. The important thing to remember is that you are not alone. There are people out there that can help you.</p>
+    <h2>Mental Health Services</h2>
+    <p>List of mental health services / numbers</p>
+    <h2>Physical Health Services</h2>
+    <p>List of physical health services / numbers</p>
+    <h2>Get In Touch</h2>
+    <p>If there is something that you looking for more information on, or maybe you are feeling a little lost, you can get in touch with us <a href="/html/contact.html">here</a> or via our <a>twitter: @lostStudentGuide</a></p>
 </body>
 </html>
