added boiler plate html to sections and added materialise css

--- a/html/guideSections/bars.html
+++ b/html/guideSections/bars.html
@@ -5,5 +5,45 @@
 </head>
 <body>
     <h1>Bars</h1>
+    <button class="accordion">The Speakeasy</button>
+    <div class="panel">
+        <p>Description</p>
+        <p>Location</p>
+        <p>Price Rating</p>
+        <p>Link to website / socials if exists</p>
+        <p>Opening Hourse</p>
+    </div>
+    <button class="accordion">Lavery's</button>
+    <div class="panel">
+        <p>Description</p>
+        <p>Location</p>
+        <p>Price Rating</p>
+        <p>Link to website / socials if exists</p>
+        <p>Opening Hourse</p>
+    </div>
+    <button class="accordion">The Perch</button>
+    <div class="panel">
+        <p>Description</p>
+        <p>Location</p>
+        <p>Price Rating</p>
+        <p>Link to website / socials if exists</p>
+        <p>Opening Hourse</p>
+    </div>
+    <button class="accordion">The Dirty Onion</button>
+    <div class="panel">
+        <p>Description</p>
+        <p>Location</p>
+        <p>Price Rating</p>
+        <p>Link to website / socials if exists</p>
+        <p>Opening Hourse</p>
+    </div>
+    <button class="accordion">Filthy Mc Nasty's</button>
+    <div class="panel">
+        <p>Description</p>
+        <p>Location</p>
+        <p>Price Rating</p>
+        <p>Link to website / socials if exists</p>
+        <p>Opening Hourse</p>
+    </div>
 </body>
 </html>
