--- a/html/guideSections/nightlife.html
+++ b/html/guideSections/nightlife.html
@@ -5,5 +5,50 @@
 </head>
 <body>
     <h1>Nightlife</h1>
+    <button class="accordion">Limelight</button>
+    <div class="panel">
+        <p>Description</p>
+        <p>Location</p>
+        <p>Price Rating</p>
+        <p>Link to website / socials if exists</p>
+        <p>Opening Hourse</p>
+        <p>Food locations nearby</p>
+    </div>
+    <button class="accordion">Thompsons</button>
+    <div class="panel">
+        <p>Description</p>
+        <p>Location</p>
+        <p>Price Rating</p>
+        <p>Link to website / socials if exists</p>
+        <p>Opening Hourse</p>
+        <p>Food locations nearby</p>
+    </div>
+    <button class="accordion">Kremlin</button>
+    <div class="panel">
+        <p>Description</p>
+        <p>Location</p>
+        <p>Price Rating</p>
+        <p>Link to website / socials if exists</p>
+        <p>Opening Hourse</p>
+        <p>Food locations nearby</p>
+    </div>
+    <button class="accordion">Hatfield</button>
+    <div class="panel">
+        <p>Description</p>
+        <p>Location</p>
+        <p>Price Rating</p>
+        <p>Link to website / socials if exists</p>
+        <p>Opening Hourse</p>
+        <p>Food locations nearby</p>
+    </div>
+    <button class="accordion">Botanic Inn</button>
+    <div class="panel">
+        <p>Description</p>
+        <p>Location</p>
+        <p>Price Rating</p>
+        <p>Link to website / socials if exists</p>
+        <p>Opening Hourse</p>
+        <p>Food locations nearby</p>
+    </div>
 </body>
 </html>
