--- a/html/guideSections/restaurants.html
+++ b/html/guideSections/restaurants.html
@@ -4,6 +4,47 @@
     <title>Restaurants</title>
 </head>
 <body>
+    <h1>https://www.w3schools.com/howto/howto_js_accordion.asp</h1>
     <h1>Restaurants</h1>
+    <button class="accordion">French Village</button>
+    <div class="panel">
+        <p>Description</p>
+        <p>Location</p>
+        <p>Price Rating</p>
+        <p>Link to website / socials if exists</p>
+        <p>Opening Hourse</p>
+    </div>
+    <button class="accordion">Umi Falafel</button>
+    <div class="panel">
+        <p>Description</p>
+        <p>Location</p>
+        <p>Price Rating</p>
+        <p>Link to website / socials if exists</p>
+        <p>Opening Hourse</p>        
+    </div>
+    <button class="accordion">Maggie Mays</button>
+    <div class="panel">
+        <p>Description</p>
+        <p>Location</p>
+        <p>Price Rating</p>
+        <p>Link to website / socials if exists</p>
+        <p>Opening Hourse</p>        
+    </div>
+    <button class="accordion">Nandos</button>
+    <div class="panel">
+        <p>Description</p>
+        <p>Location</p>
+        <p>Price Rating</p>
+        <p>Link to website / socials if exists</p>
+        <p>Opening Hourse</p>        
+    </div>
+    <button class="accordion">Made In Belfast</button>
+    <div class="panel">
+        <p>Description</p>
+        <p>Location</p>
+        <p>Price Rating</p>
+        <p>Link to website / socials if exists</p>
+        <p>Opening Hourse</p>        
+    </div>
 </body>
 </html>
