--- a/html/guideSections/tourismSpots.html
+++ b/html/guideSections/tourismSpots.html
@@ -5,5 +5,48 @@
 </head>
 <body>
     <h1>Tourism</h1>
+    <button class="accordion">Titanic Museum</button>
+    <div class="panel">
+        <p>Description</p>
+        <p>Location</p>
+        <p>Price Rating</p>
+        <p>Link to website / socials if exists</p>
+    </div>
+    <button class="accordion">Giants Causeway</button>
+    <div class="panel">
+        <p>Description</p>
+        <p>Location</p>
+        <p>Price Rating</p>
+        <p>Link to website / socials if exists</p>
+    </div>
+    <button class="accordion">Game of Thrones Tour</button>
+    <div class="panel">
+        <p>Description</p>
+        <p>Location</p>
+        <p>Price Rating</p>
+        <p>Link to website / socials if exists</p>
+    </div>
+    <button class="accordion">Marble Arch Caves</button>
+    <div class="panel">
+        <p>Description</p>
+        <p>Location</p>
+        <p>Price Rating</p>
+        <p>Link to website / socials if exists</p>
+    </div>
+    <button class="accordion">Portrush</button>
+    <div class="panel">
+        <p>Description</p>
+        <p>Location</p>
+        <p>Price Rating</p>
+        <p>Link to website / socials if exists</p>
+    </div>
+    <button class="accordion">Belfast Tour Bus Hop On Hop Off</button>
+    <div class="panel">
+        <p>Description</p>
+        <p>Location</p>
+        <p>Price Rating</p>
+        <p>Link to website / socials if exists</p>
+    </div>
+    <h3>For more information and ideas, visit <a href="https://discovernorthernireland.com/">Discover NI</a></h3>
 </body>
 </html>
