--- a/html/guideSections/cafes.html
+++ b/html/guideSections/cafes.html
@@ -4,6 +4,56 @@
     <title>Cafes</title>
 </head>
 <body>
-    <h1>Cafes</h1>
+    <h1>Cafes</h1>   
+    <button class="accordion">Caffe Nero</button>
+    <div class="panel">
+        <p>Description</p>
+        <p>Location</p>
+        <p>Price Rating</p>
+        <p>Link to website / socials if exists</p>
+        <p>Opening Hourse</p>
+        <p>wifi</p>
+        <p>can you study here</p>
+    </div>
+    <button class="accordion">Starbucks</button>
+    <div class="panel">
+        <p>Description</p>
+        <p>Location</p>
+        <p>Price Rating</p>
+        <p>Link to website / socials if exists</p>
+        <p>Opening Hourse</p>
+        <p>wifi</p>
+        <p>can you study here</p>
+    </div>
+    <button class="accordion">Bob and Berts</button>
+    <div class="panel">
+        <p>Description</p>
+        <p>Location</p>
+        <p>Price Rating</p>
+        <p>Link to website / socials if exists</p>
+        <p>Opening Hourse</p>
+        <p>wifi</p>
+        <p>can you study here</p>
+    </div>
+    <button class="accordion">Greggs</button>
+    <div class="panel">
+        <p>Description</p>
+        <p>Location</p>
+        <p>Price Rating</p>
+        <p>Link to website / socials if exists</p>
+        <p>Opening Hourse</p>
+        <p>wifi</p>
+        <p>can you study here</p>
+    </div>
+    <button class="accordion">Ground Coffee</button>
+    <div class="panel">
+        <p>Description</p>
+        <p>Location</p>
+        <p>Price Rating</p>
+        <p>Link to website / socials if exists</p>
+        <p>Opening Hourse</p>
+        <p>wifi</p>
+        <p>can you study here</p>
+    </div>
 </body>
 </html>
