--- a/html/guideSections/thingsToDo.html
+++ b/html/guideSections/thingsToDo.html
@@ -1,9 +1,49 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>ThingsToDO</title>
+    <title>Things To Do</title>
 </head>
 <body>
-    <h1>Things To DO</h1>
+    <h1>Things To Do</h1>
+    <button class="accordion">Cinemas</button>
+    <div class="panel">
+        <p>Description</p>
+        <p>Location</p>
+        <p>Price Rating</p>
+        <p>Link to website / socials if exists</p>
+        <p>Opening Hourse</p>
+    </div>
+    <button class="accordion">Museums</button>
+    <div class="panel">
+        <p>Description</p>
+        <p>Location</p>
+        <p>Price Rating</p>
+        <p>Link to website / socials if exists</p>
+        <p>Opening Hourse</p>
+    </div>
+    <button class="accordion">Concerts</button>
+    <div class="panel">
+        <p>Description</p>
+        <p>Location</p>
+        <p>Price Rating</p>
+        <p>Link to website / socials if exists</p>
+        <p>Opening Hourse</p>
+    </div>
+    <button class="accordion">Gyms</button>
+    <div class="panel">
+        <p>Description</p>
+        <p>Location</p>
+        <p>Price Rating</p>
+        <p>Link to website / socials if exists</p>
+        <p>Opening Hourse</p>
+    </div>
+    <button class="accordion">Train Dublin</button>
+    <div class="panel">
+        <p>Description</p>
+        <p>Location</p>
+        <p>Price Rating</p>
+        <p>Link to website / socials if exists</p>
+        <p>Opening Hourse</p>
+    </div>
 </body>
 </html>
