--- a/index.html
+++ b/index.html
@@ -2,12 +2,32 @@
 <html>
 	<head>
 		<title>LSG</title>
+		<link type="text/css" rel="stylesheet" href="css/materialize.css"/>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 	</head>
 	<body>
 		<h1>Lost Student Guide</h1>
 		<h2>Welcome to the Lost Student Guide!</h2>
 		<p>There are two universities situated Belfast. Many students are new to the area and might be feeling a little lost. Have no fear, we at the lost student guide are here to help! We have selected a few locations that students might want to know about.</p>
 		<p>If there is something that you looking for more information on, or maybe you are feeling a little lost, you can get in touch with us <a href="html/contact.html">here</a> or via our <a>twitter: @lostStudentGuide</a> or visit our <a href="html/help.html">help page</a></p>
-		
+ 
+		<div class="row">
+			<div class="col s12 m7">
+				<div class="card">
+					<div class="card-image">
+						<img src="images/fratelli-belfast.jpg" alt="image of a restaurant">
+						<span class="card-title">Restaurants</span>
+					</div>
+					<div class="card-content">
+						<p>I am a very simple card. I am good at containing small bits of information.
+						I am convenient because I require little markup to use effectively.</p>
+					</div>
+					<div class="card-action">
+						<a href="html/guideSections/restaurants.html">See More</a>
+					</div>
+				</div>
+			</div>
+		</div>
+		<script type="text/javascript" src="js/materialize.js"></script>
 	</body>
 </html>
