Basic contact form
Created basic contact form and added some content to Cinema Section

--- a/html/contact.html
+++ b/html/contact.html
@@ -4,6 +4,37 @@
     <title>Contact</title>
 </head>
 <body>
-<h1>Contact</h1>
+<h1>Contact </h1>
+
+
+<!-- Contact Us form -->
+<form>
+  <div class="form-group">
+    <label for="first_name">First Name</label>
+    <input type="text" class="form-control" id="first_name" placeholder="Enter your First Name" required>
+</div>
+  
+<div class="form-group">
+    <label for="second_name">Second Name</label>
+    <input type="text" class="form-control" id="second_name" placeholder="Enter your Second Name" required>
+</div>
+
+<div class="form-group">
+<label for="Email">Email</label>
+<input type="email" class="form-control" id="email"  placeholder="Enter a vaild email address" required>
+</div>
+
+<div class="form-group">
+<textarea name="message" id="message" class="form-control" placeholder="Please enter your query here" cols="30" rows="4" required></textarea></div>
+
+
+<!-- Submit Button -->
+<button type="submit" class="btn btn-primary">Submit</button>
+
+<!-- Reset Button -->
+<button type="reset" class="btn btn-primary">Reset</button>
+
+</form>
+
 </body>
 </html>
