--- a/html/guideSections/thingsToDo.html
+++ b/html/guideSections/thingsToDo.html
@@ -7,43 +7,75 @@
     <h1>Things To Do</h1>
     <button class="accordion">Cinemas</button>
     <div class="panel">
-        <p>Description</p>
+        <p>We have up to 6 different cinemas within Belfast city centre, ranging from the most popular Multiplex cinema branch the Movie House on the Dublin Road to the Odeon in Victoria Square and the Odyssey in SSE Arena. With so many screens to choose from, all with comfortable seats and surround sound. Amongst students the Movie House would be the most popular as it’s located right beside Botanic and city centre. Get yourself down for their Crazy Tuesdays, £3.50 tickets all day or on any other day of the week spend £5 with your student card.
+        Whilst the Odyssey has special offers, the most popular being the student Sunday. When you can take full advantage of using your student card and get your ticket for £3.50 or even spend the entire day there watching 3 different films for just £9!</p>
+
         <p>Location</p>
+        <p>Movie House 
+        14 Dublin Rd,
+        Belfast 
+        BT2 7HN</p>
+
         <p>Price Rating</p>
+
         <p>Link to website / socials if exists</p>
-        <p>Opening Hourse</p>
+        <a href="https://www.moviehouse.co.uk/Movie/Cinema/1/dublin_road">Movie House Dublin Road Website</a>
+
+        <p>Opening Hours</p>
+
     </div>
     <button class="accordion">Museums</button>
     <div class="panel">
         <p>Description</p>
+
         <p>Location</p>
+
         <p>Price Rating</p>
+
         <p>Link to website / socials if exists</p>
-        <p>Opening Hourse</p>
+
+        <p>Opening Hours</p>
+
     </div>
+
     <button class="accordion">Concerts</button>
     <div class="panel">
         <p>Description</p>
+
         <p>Location</p>
+
         <p>Price Rating</p>
+
         <p>Link to website / socials if exists</p>
-        <p>Opening Hourse</p>
+
+        <p>Opening Hours</p>
+
     </div>
+
     <button class="accordion">Gyms</button>
     <div class="panel">
         <p>Description</p>
+
         <p>Location</p>
+
         <p>Price Rating</p>
+
         <p>Link to website / socials if exists</p>
-        <p>Opening Hourse</p>
+
+        <p>Opening Hours</p>
     </div>
+
     <button class="accordion">Train Dublin</button>
     <div class="panel">
         <p>Description</p>
+
         <p>Location</p>
+
         <p>Price Rating</p>
+
         <p>Link to website / socials if exists</p>
-        <p>Opening Hourse</p>
+
+        <p>Opening Hours</p>
     </div>
 </body>
 </html>
