--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>LSG</title>
-		<link type="text/css" rel="stylesheet" href="css/materialize.css"/>
+		<link type="text/css" rel="stylesheet" href="css/bootstrap.css"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 	</head>
 	<body>
@@ -12,22 +12,45 @@
 		<p>If there is something that you looking for more information on, or maybe you are feeling a little lost, you can get in touch with us <a href="html/contact.html">here</a> or via our <a>twitter: @lostStudentGuide</a> or visit our <a href="html/help.html">help page</a></p>
  
 		<div class="row">
-			<div class="col s12 m7">
-				<div class="card">
-					<div class="card-image">
-						<img src="images/fratelli-belfast.jpg" alt="image of a restaurant">
-						<span class="card-title">Restaurants</span>
-					</div>
-					<div class="card-content">
-						<p>I am a very simple card. I am good at containing small bits of information.
-						I am convenient because I require little markup to use effectively.</p>
-					</div>
-					<div class="card-action">
-						<a href="html/guideSections/restaurants.html">See More</a>
-					</div>
+			<div class="card" style="width: 34rem;">
+				<img class="card-img-top" src="images/fratelli-belfast.jpg" alt="Image of a restaurant">
+				<div class="card-body">
+					<h3 class="card-text">Restaurants</h3>
+				</div>
+			</div>
+			<div class="card" style="width: 34rem;">
+				<img class="card-img-top" src="images/cafe-parisien.jpg" alt="Image of a restaurant">
+				<div class="card-body">
+					<h3 class="card-text">Cafes</h3>
+				</div>
+			</div>
+			<div class="card" style="width: 34rem;">
+				<img class="card-img-top" src="images/filthy-mcnastys.jpg" alt="Image of a restaurant">
+				<div class="card-body">
+					<h3 class="card-text">Bars</h3>
+				</div>
+			</div>
+			<div class="card" style="width: 34rem;">
+				<img class="card-img-top" src="images/nightlife.jpg" alt="Image of a restaurant">
+				<div class="card-body">
+					<h3 class="card-text">Nightlife</h3>
+				</div>
+			</div>
+			<div class="card" style="width: 34rem;">
+				<img class="card-img-top" src="images/concert-show.jpg" alt="Image of a restaurant">
+				<div class="card-body">
+					<h3 class="card-text">Things to Do</h3>
+				</div>
+			</div>
+			<div class="card" style="width: 34rem;">
+				<img class="card-img-top" src="images/dark-hedges.JPG" alt="Image of a restaurant">
+				<div class="card-body">
+					<h3 class="card-text">Tourism Spots</h3>
 				</div>
 			</div>
 		</div>
-		<script type="text/javascript" src="js/materialize.js"></script>
+
+		
+		<script type="text/javascript" src="js/bootstrap.js"></script>
 	</body>
 </html>
