updated tourism spot image in section guide card in index.html

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 				</div>
 			</div>
 			<div class="card" style="width: 34rem;">
-				<img class="card-img-top" src="images/dark-hedges.JPG" alt="Image of a restaurant">
+				<img class="card-img-top" src="images/titanic-boat.jpg" alt="Image of a restaurant">
 				<div class="card-body">
 					<h3 class="card-text">Tourism Spots</h3>
 				</div>
