--- a/html/guideSections/nightlife.html
+++ b/html/guideSections/nightlife.html
@@ -5,50 +5,99 @@
 </head>
 <body>
     <h1>Nightlife</h1>
+
+<!-- Infor on Limelight -->
     <button class="accordion">Limelight</button>
     <div class="panel">
         <p>Description</p>
+        <p>This no-frills nightclub and live music venue has been staging rock & indie greats since the 1980s.</p>
+
         <p>Location</p>
+        <p>17 Ormeau Ave, Belfast BT2 8HD</p>
+
         <p>Price Rating</p>
+        <p>£5 admission fees on Mondays, Tuesdays, Thursdays, Friday and Saturdays!</p>
+
         <p>Link to website / socials if exists</p>
-        <p>Opening Hourse</p>
+        <p>You can find out more information about Limelight <a href="http://www.limelightbelfast.com/">here.</a>
+        <p>Opening Hours</p>
         <p>Food locations nearby</p>
     </div>
+
+    <!-- Info on Thompsons -->
     <button class="accordion">Thompsons</button>
     <div class="panel">
         <p>Description</p>
+        <p></p>
+
         <p>Location</p>
+        <p>3 Pattersons Pl, Belfast BT1 4HW</p>
+
+
         <p>Price Rating</p>
+
         <p>Link to website / socials if exists</p>
-        <p>Opening Hourse</p>
+        <p>You can find out more information about Thompsons <a href="https://www.facebook.com/clubthompsons/">on their Facebook page here.</a>
+
+        <p>Opening Hours</p>
+
         <p>Food locations nearby</p>
+
     </div>
+
+    <!-- Info on Kremlin -->
     <button class="accordion">Kremlin</button>
     <div class="panel">
         <p>Description</p>
+
         <p>Location</p>
+        <p>96 Donegall St, Belfast BT1 2GW</p>
+
         <p>Price Rating</p>
+
         <p>Link to website / socials if exists</p>
-        <p>Opening Hourse</p>
+        <p>You can find out more information about Kremlin <a href="http://www.kremlin-belfast.com/">here.</a>
+
+        <p>Opening Hours</p>
+
         <p>Food locations nearby</p>
     </div>
-    <button class="accordion">Hatfield</button>
+
+    <!-- The Hatfield info -->
+    <button class="accordion">The Hatfield</button>
     <div class="panel">
         <p>Description</p>
+
         <p>Location</p>
+        <p>130 Ormeau Rd, Belfast BT7 2EB</p>
+
         <p>Price Rating</p>
+
         <p>Link to website / socials if exists</p>
-        <p>Opening Hourse</p>
+         <p>You can find out more information about The Hatfield <a href="http://www.hatfieldhousebelfast.com/">here.</a>
+
+        <p>Opening Hours</p>
+
         <p>Food locations nearby</p>
     </div>
-    <button class="accordion">Botanic Inn</button>
+
+    <!-- The Botanic Inn info -->
+    <button class="accordion">The Botanic Inn</button>
     <div class="panel">
         <p>Description</p>
+
         <p>Location</p>
+        <p>23-27 Malone Rd, Belfast BT9 6RU
+
         <p>Price Rating</p>
+
         <p>Link to website / socials if exists</p>
-        <p>Opening Hourse</p>
+         <p>You can find out more information about Kremlin <a href="http://www.thebotanicinn.com/#menu-section">here.</a>
+
+        <p>Opening Hours</p>
+
         <p>Food locations nearby</p>
     </div>
+
 </body>
 </html>
