--- a/html/guideSections/restaurants.html
+++ b/html/guideSections/restaurants.html
@@ -2,49 +2,72 @@
 <html>
 <head>
     <title>Restaurants</title>
+    <link type="text/css" rel="stylesheet" href="css/bootstrap.css"/>
 </head>
 <body>
     <h1>https://www.w3schools.com/howto/howto_js_accordion.asp</h1>
     <h1>Restaurants</h1>
-    <button class="accordion">French Village</button>
+    <button class="accordion">French Village Cafe & Bistro</button>
     <div class="panel">
         <p>Description</p>
-        <p>Location</p>
-        <p>Price Rating</p>
-        <p>Link to website / socials if exists</p>
-        <p>Opening Hourse</p>
+        <p>Botanic Avenue, Belfast</p>
+        <p>££</p>
+        <p href="https://www.frenchvillagebakery.co.uk/"><a>Website</a></p>
+        <p>Opening Hours</p>
+        <ul>
+            <li>Monday - Friday: 7:30am - 10pm</li>
+            <li>Saturday: 9am - 10pm</li>
+            <li>Sunday: 9am - 6pm</li>
+        </ul>
     </div>
     <button class="accordion">Umi Falafel</button>
     <div class="panel">
         <p>Description</p>
-        <p>Location</p>
-        <p>Price Rating</p>
-        <p>Link to website / socials if exists</p>
-        <p>Opening Hourse</p>        
+        <p>Botanic Aveneue, Belfast</p>
+        <p>£</p>
+        <p><a href="http://umifalafel.ie/">Website</a></p>
+        <p>Opening Hours:</p>
+        <ul>
+            <li>Monday - Sunday: 12am - 9pm</li> 
+        </ul>
     </div>
     <button class="accordion">Maggie Mays</button>
     <div class="panel">
         <p>Description</p>
-        <p>Location</p>
-        <p>Price Rating</p>
-        <p>Link to website / socials if exists</p>
-        <p>Opening Hourse</p>        
+        <p>Malone Road Belfast</p>
+        <p>££</p>
+        <p><a href="https://maggiemaysbelfastcafe.co.uk/">Website</a>></p>
+        <p>Opening Hours</p>  
+        <ul>
+            <li>Monday - Friday: 8am - 9:30pm</li>
+            <li>Saturday - Sunday: 9am - 10:30pm</li>
+        </ul>    
     </div>
-    <button class="accordion">Nandos</button>
+    <button class="accordion">Nando's</button>
     <div class="panel">
         <p>Description</p>
-        <p>Location</p>
-        <p>Price Rating</p>
-        <p>Link to website / socials if exists</p>
-        <p>Opening Hourse</p>        
+        <p>Ormeay Avenue</p>
+        <p>££</p>
+        <p><a href="https://www.nandos.co.uk/restaurants/belfast-bedford-street">Website</a></p>
+        <p>Opening Hours</p>   
+        <ul>
+            <li>Monday - Wednesday: 12am - 10pm</li>
+            <li>Friday - Saturday: 12am - 11pm</li>
+            <li>Sunday: 12am - 10pm</li>
+        </ul>      
     </div>
     <button class="accordion">Made In Belfast</button>
     <div class="panel">
         <p>Description</p>
-        <p>Location</p>
-        <p>Price Rating</p>
-        <p>Link to website / socials if exists</p>
-        <p>Opening Hourse</p>        
+        <p>Talbot Street</p>
+        <p>£££</p>
+        <p><a href="http://madeinbelfastni.com/cathedral-quarter/"></a>Website</p>
+        <p>Opening Hours</p>   
+        <ul>
+            <li>Monday - Thursday: 12 - 9:30pm</li>
+            <li>Friday - Saturday: 12 - 10pm</li>
+            <li>Sunday: 12am - 9pm</li>
+        </ul>     
     </div>
 </body>
 </html>
