--- a/html/guideSections/cafes.html
+++ b/html/guideSections/cafes.html
@@ -7,53 +7,78 @@
     <h1>Cafes</h1>   
     <button class="accordion">Caffe Nero</button>
     <div class="panel">
-        <p>Description</p>
-        <p>Location</p>
-        <p>Price Rating</p>
-        <p>Link to website / socials if exists</p>
-        <p>Opening Hourse</p>
-        <p>wifi</p>
-        <p>can you study here</p>
+        <p>Caffé Nero is an Italian coffee-shop chain, with a light menu of sandwiches, salads and pastries. Their coffee is specially blended and it tastes great. It is perfect for meeting up with friends or even getting a bit of work done.</p>
+        <p>The Carriages, Botanic Avenue</p>
+        <p>££</p>
+        <p><a href="https://caffenero.com/uk/">Visit their website for more information</a></p>
+        <p>Opening Hours</p>
+        <ul>
+            <li>Monday - Friday: 7am - 9pm </li>
+            <li>Saturday: 8am - 7pm</li>
+            <li>Sunday: 9:30am - 7pm</li>
+        </ul>
+        <p>Wifi: Free</p>
+        <p><strong>Can you study here?</strong>Yes. It's relaxed vibe and the ability to sit in for as long as you like makes this a good spot for studying if you don;t enojoy the silence of the library.</p>
     </div>
     <button class="accordion">Starbucks</button>
     <div class="panel">
-        <p>Description</p>
-        <p>Location</p>
-        <p>Price Rating</p>
-        <p>Link to website / socials if exists</p>
-        <p>Opening Hourse</p>
-        <p>wifi</p>
-        <p>can you study here</p>
+        <p>A coffeehouse with roots in Seattle. This Starbucks is in a central city location - behind city hall - but during the day it is usually quiet compared ot other Starbucks location</p>
+        <p>Harvester House, Adelaide Street</p>
+        <p>££</p>
+        <p><a href="https://www.starbucks.co.uk/menu">Visit their website for more information</a></p>
+        <p>Opening Hours</p>
+        <ul>
+            <li>Monday - Friday: 7am - 6:30pm</li>
+            <li>Saturday - Sunday: Closed</li>
+        </ul>
+        <p>Wifi: Free</p>
+        <p><strong>Can you study here?</strong> Yes. This location is a nice open space so you can get your work done in peace.</p>
     </div>
-    <button class="accordion">Bob and Berts</button>
+    <button class="accordion">Bob & Berts Coffee House</button>
     <div class="panel">
-        <p>Description</p>
-        <p>Location</p>
-        <p>Price Rating</p>
-        <p>Link to website / socials if exists</p>
-        <p>Opening Hourse</p>
-        <p>wifi</p>
-        <p>can you study here</p>
+        <p>A cosy artisan coffee shop, close to the Ulster Museum and the Botanic Gardens. Not only is Bob & Berts good for coffee, it is a great spot for something to eat if you're in the mood for something tasty</p>
+        <p>Stranmillis Road</p>
+        <p>££</p>
+        <p><a href="https://bobandberts.com/">Visit their website for more information</a></p>
+        <p>Opening Hours</p>
+        <ul>
+            <li>Monday - Friday: 7:30am - 9pm</li>
+            <li>Saturday - Sunday: 8:30am - 7pm</li>
+        </ul>
+        <p>Wifi: Free</p>
+        <p><strong>Can you study here?</strong> We would say that Bob & Berts is more of a coffee and something to eat kind of place, but it's totally up to you where you want to do your work!</p>
     </div>
     <button class="accordion">Greggs</button>
     <div class="panel">
-        <p>Description</p>
-        <p>Location</p>
-        <p>Price Rating</p>
-        <p>Link to website / socials if exists</p>
-        <p>Opening Hourse</p>
-        <p>wifi</p>
-        <p>can you study here</p>
+        <p>Greggs is a chain bakery that prepares breads, savoury snacks, and sweet treats. You can also get a coffee, or a cup of tea if coffee isn't your thing.</p>
+        <p>Castle Lane</p>
+        <p>£</p>
+        <p><a href="https://www.greggs.co.uk/"></a>Visit their website for more information</p>
+        <p>Opening Hours</p>
+        <ul>
+            <li>Monday - Wednesday: 7am - 6:30pm</li>
+            <li>Thursday: 7am - 7pm</li>
+            <li>Friday - Saturday: 7am - 6:30pm</li>
+            <li>Sunday: 9:30am - 6pm</li>
+        </ul>
+        <p>Wifi: Free</p>
+        <p><strong>Can you study here?</strong>Greggs is handy if you want to grab something quick or you need a pick me up while you are out shopping. With all the hustle and bustle going on, it might hard to get in the studying mindset, but it is totally up to you where you do your work!</p>
     </div>
     <button class="accordion">Ground Coffee</button>
     <div class="panel">
-        <p>Description</p>
-        <p>Location</p>
-        <p>Price Rating</p>
-        <p>Link to website / socials if exists</p>
-        <p>Opening Hourse</p>
-        <p>wifi</p>
-        <p>can you study here</p>
+        <p>Ground Espresso is coffee chain store stemming from Coleraine in Northern Ireland. They are driven by their ability to provide comfort, friendship, and happiness to their customers.</p>
+        <p>Waterstones, Fountain Street</p>
+        <p>££</p>
+        <p><a href="https://groundcoffee.net/">Visit their website for more information</a></p>
+        <p>Opening Hours</p>
+        <ul>
+            <li>Monday - Wednesday: 9am - 5:30pm</li>
+            <li>Thursday: 9am - 9pm</li>
+            <li>Friday - Saturday: 9am - 5:30pm</li>
+            <li>Sunday: 12:30pm - 9pm</li>
+        </ul>
+        <p>Wifi: Free</p>
+        <p><strong>Can you study here?</strong>This Ground Espresso Bar is in the Waterstones in Fountain Street. It is really cosy and quiet, which is perfect for studying and getting work done.</p>
     </div>
 </body>
 </html>
