--- a/html/guideSections/restaurants.html
+++ b/html/guideSections/restaurants.html
@@ -9,10 +9,10 @@
     <h1>Restaurants</h1>
     <button class="accordion">French Village Cafe & Bistro</button>
     <div class="panel">
-        <p>Description</p>
+        <p>French VIllage Cafe & Bistro is the perfect place for anything from a quick coffee and a traybake, to an evening meal (you can even bring your own bottle! We love their sandwiches from the deli!</p>
         <p>Botanic Avenue, Belfast</p>
         <p>££</p>
-        <p href="https://www.frenchvillagebakery.co.uk/"><a>Website</a></p>
+        <p href="https://www.frenchvillagebakery.co.uk/"><a>Visit their website for more information</a></p>
         <p>Opening Hours</p>
         <ul>
             <li>Monday - Friday: 7:30am - 10pm</li>
@@ -22,10 +22,10 @@
     </div>
     <button class="accordion">Umi Falafel</button>
     <div class="panel">
-        <p>Description</p>
+        <p>Umi Falafel offers a range of delicious vegetarian and vegan dishes. Everything on the menu is made fresh daily and their juices are so refreshing. Six falafel with humus and sweet chilli sauce for £3.50, now that's a bargain!</p>
         <p>Botanic Aveneue, Belfast</p>
         <p>£</p>
-        <p><a href="http://umifalafel.ie/">Website</a></p>
+        <p><a href="http://umifalafel.ie/">Visit their website for more information</a></p>
         <p>Opening Hours:</p>
         <ul>
             <li>Monday - Sunday: 12am - 9pm</li> 
@@ -33,10 +33,10 @@
     </div>
     <button class="accordion">Maggie Mays</button>
     <div class="panel">
-        <p>Description</p>
+        <p>Whatever you are in the mood for, Maggie May's probably have it on their menu. Their daily specials and amazing milkshakes will give you a good feed and won't put you out of pocket.</p>
         <p>Malone Road Belfast</p>
         <p>££</p>
-        <p><a href="https://maggiemaysbelfastcafe.co.uk/">Website</a>></p>
+        <p><a href="https://maggiemaysbelfastcafe.co.uk/">Visit their website for more information.</a>></p>
         <p>Opening Hours</p>  
         <ul>
             <li>Monday - Friday: 8am - 9:30pm</li>
@@ -45,10 +45,10 @@
     </div>
     <button class="accordion">Nando's</button>
     <div class="panel">
-        <p>Description</p>
+        <p>Nando's is a casual dining chain restaurant with origins in South African. They specialise in Portuguese style chicken dishes with various peri-peri marinades.</p>
         <p>Ormeay Avenue</p>
         <p>££</p>
-        <p><a href="https://www.nandos.co.uk/restaurants/belfast-bedford-street">Website</a></p>
+        <p><a href="https://www.nandos.co.uk/restaurants/belfast-bedford-street">Visit their website for more information</a></p>
         <p>Opening Hours</p>   
         <ul>
             <li>Monday - Wednesday: 12am - 10pm</li>
@@ -58,10 +58,10 @@
     </div>
     <button class="accordion">Made In Belfast</button>
     <div class="panel">
-        <p>Description</p>
+        <p>Made In Belfast is a cosy restaurant serving a gastropub style menu using sustainable and locally sourced ingredients</p>
         <p>Talbot Street</p>
         <p>£££</p>
-        <p><a href="http://madeinbelfastni.com/cathedral-quarter/"></a>Website</p>
+        <p><a href="http://madeinbelfastni.com/cathedral-quarter/"></a>Visit their website for more information</p>
         <p>Opening Hours</p>   
         <ul>
             <li>Monday - Thursday: 12 - 9:30pm</li>
