--- a/html/guideSections/tourismSpots.html
+++ b/html/guideSections/tourismSpots.html
@@ -24,7 +24,7 @@
             <li>Student 16+: £15.00</li>
         </ul>
         
-        <p>Here's the link to the <a href="https://titanicbelfast.com/">website.</a>
+        <p><a href="https://titanicbelfast.com/">Visit their website for more information.</a>
     </div>
 
 <!-- Giants causeway info -->
@@ -45,8 +45,7 @@
             <li>Group Child (minimum group size 15): £4.00</li>
         </ul>
 
-        <p>Link to the website can be 
-        <a href="https://www.nationaltrust.org.uk/giants-causeway">found here.</a></p>
+        <p><a href="https://www.nationaltrust.org.uk/giants-causeway">Visit their website for more information.</a></p>
     </div>
 
 <!-- Game of Thrones Information -->
@@ -60,7 +59,7 @@
         <p>Price Rating</p>
         <p>£29.50 - £90.00
 
-        <p>You can find out more <a href="http://www.gameofthrones-winterfelltours.com/">here.</a></p>
+        <p><a href="http://www.gameofthrones-winterfelltours.com/">Visit their website for more information</a></p>
     </div>
 
     <!-- Marble Arch Caves -->
@@ -81,7 +80,7 @@
             <li>Student: £6.95</li>
         </ul>
 
-        <p>You can find out more <a href="https://www.marblearchcavesgeopark.com/">here.</a></p>
+        <p><a href="https://www.marblearchcavesgeopark.com/">Visit their website for more information.</a></p>
     </div>
 
     <!-- Info on Portrush -->
@@ -92,7 +91,7 @@
 
         <p>County Antrim </p>
 
-        <p>Find out more <a href="https://discovernorthernireland.com/Portrush-Visitor-Information-Centre-Portrush-P41177/">here.</a></p>
+        <p><a href="https://discovernorthernireland.com/Portrush-Visitor-Information-Centre-Portrush-P41177/">Visit their website for more information</a></p>
 
     </div>
 
@@ -111,7 +110,7 @@
             <li>Family(2/3): £29.00</li>
         </ul>
 
-        <p>Find out more <a href="https://belfastcitysightseeing.com/belfast-city-sightseeing-tour/">here.</a></p>
+        <p><a href="https://belfastcitysightseeing.com/belfast-city-sightseeing-tour/">Visit their website for more information.</a></p>
 
     </div>
 
