started putting in accordion and carousel

--- a/html/guideSections/restaurants.html
+++ b/html/guideSections/restaurants.html
@@ -5,14 +5,13 @@
     <link type="text/css" rel="stylesheet" href="css/bootstrap.css"/>
 </head>
 <body>
-    <h1>https://www.w3schools.com/howto/howto_js_accordion.asp</h1>
     <h1>Restaurants</h1>
     <button class="accordion">French Village Cafe & Bistro</button>
     <div class="panel">
         <p>French VIllage Cafe & Bistro is the perfect place for anything from a quick coffee and a traybake, to an evening meal (you can even bring your own bottle! We love their sandwiches from the deli!</p>
         <p>Botanic Avenue, Belfast</p>
         <p>££</p>
-        <p href="https://www.frenchvillagebakery.co.uk/"><a>Visit their website for more information</a></p>
+        <p><a href="https://www.frenchvillagebakery.co.uk/">Visit their website for more information</a></p>
         <p>Opening Hours</p>
         <ul>
             <li>Monday - Friday: 7:30am - 10pm</li>
@@ -69,5 +68,6 @@
             <li>Sunday: 12am - 9pm</li>
         </ul>     
     </div>
+    		<script type="text/javascript" src="js/bootstrap.js"></script>
 </body>
 </html>
