General CSS file created and linked to each page

--- a/html/guideSections/nightlife.html
+++ b/html/guideSections/nightlife.html
@@ -2,6 +2,9 @@
 <html>
 <head>
     <title>Nightlife</title>
+    <link type="text/css" rel="stylesheet" href="../../css/general.css"/>
+    <link href="https://fonts.googleapis.com/css?family=Sedgwick+Ave" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Coming+Soon" rel="stylesheet">
 </head>
 <body>
     <h1>Nightlife</h1>
@@ -18,9 +21,10 @@
         <p>You can find out more information about Limelight <a href="http://www.limelightbelfast.com/">here.</a>
 
         <p>Opening Hours</p>
-        <p>Monday - Saturday: 12pm–2am</p>
-        <p>Wednesday & Sunday: 5pm–1am</p>
-
+        <ul>
+        <li>Monday - Saturday: 12pm–2am</li>
+        <li>Wednesday & Sunday: 5pm–1am</li>
+    </ul>
         <p>Food locations nearby</p>
     </div>
 
@@ -83,8 +87,10 @@
          <p>You can find out more information about The Hatfield <a href="http://www.hatfieldhousebelfast.com/">here.</a>
 
         <p>Opening Hours</p>
-        <p>Monday - Saturday: 11am - 1am</p>
-        <p>Sunday: 12pm - 12am</p>
+        <ul>
+        <li>Monday - Saturday: 11am - 1am</li>
+        <li>Sunday: 12pm - 12am</li>
+    </ul>
 
         <p>Food locations nearby</p>
         <p></p>
@@ -104,11 +110,13 @@
          <p>You can find out more information about the Botanic Inn</b> <a href="http://www.thebotanicinn.com/#menu-section">here.</a>
 
         <p>Opening Hours</p>
-        <p>Monday -Tuesday: 11.30am - 1am</p>
-        <p>Wed: 11.30 - 2am</p>
-        <p>Thursday - Friday: 11.30 - 1am</p>
-        <p>Saturday: 11.30 - 2am</p>
-        <p>Sunday: 12 - 11.45</p>
+        <ul>
+        <li>Monday -Tuesday: 11.30am - 1am</li>
+        <li>Wed: 11.30 - 2am</li>
+        <li>Thursday - Friday: 11.30 - 1am</li>
+        <li>Saturday: 11.30 - 2am</li>
+        <li>Sunday: 12 - 11.45</li>
+    </ul>
 
         <p>Food locations nearby</p>
     </div>
