--- a/html/guideSections/thingsToDo.html
+++ b/html/guideSections/thingsToDo.html
@@ -2,8 +2,12 @@
 <html>
 <head>
     <title>Things To Do</title>
+    <link type="text/css" rel="stylesheet" href="../../css/general.css"/>
+    <link href="https://fonts.googleapis.com/css?family=Sedgwick+Ave" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Coming+Soon" rel="stylesheet">
 </head>
 <body>
+    
     <h1>Things To Do</h1>
     <button class="accordion">Cinemas</button>
     <div class="panel">
@@ -17,16 +21,25 @@
         BT2 7HN</p>
 
         <p>Price Rating</p>
+        <ul>
+        <li>Adults: £6.50</li>
+        <li>Kids: £4.90</li>
+        <li>Students: £5.00</li>
+        <li>Crazy Tuesdays: £3.50 All day</li>
+        <li>Family Pass: £18.00 (2 adults & 2 kids)</li>
+        <li>Morning Matinee: £3.50 (before noon)</li>
+</ul>
 
-        <p>Link to website / socials if exists</p>
         <a href="https://www.moviehouse.co.uk/Movie/Cinema/1/dublin_road">Movie House Dublin Road Website</a>
 
         <p>Opening Hours</p>
-
+        <p>Monday - Sunday: 12 - 10pm</p>
     </div>
+
     <button class="accordion">Museums</button>
     <div class="panel">
-        <p>Description</p>
+        <p>With so many museums in Belfast it’s hard to choose where to go. However, the award-winning Titanic Belfast stands out by far to be one of the most popular iconic tourist attractions, with having won the ‘World’s Leading Tourist Attraction’ at the Tourism Oscars in 2016. Beside the Titanic, there’s also a maritime museum aboard the SS Nomadic, as this was the ship built to carry only the 1st and 2nd class passengers to the Titanic.
+        Whilst there’s also the Ulster Museum, known for it’s classical renaissance style setting with its displays on art, furniture, costume, ceramics and on industry. The HMS Caroline is a hands-on exhibit, with restored quarters and engine rooms on a navy C-class light cruiser built in 1914.</p>
 
         <p>Location</p>
 
