--- a/html/guideSections/tourismSpots.html
+++ b/html/guideSections/tourismSpots.html
@@ -2,6 +2,9 @@
 <html>
 <head>
     <title>Tourism Spots</title>
+    <link type="text/css" rel="stylesheet" href="../../css/general.css"/>
+    <link href="https://fonts.googleapis.com/css?family=Sedgwick+Ave" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Coming+Soon" rel="stylesheet">
 </head>
 <body>
     <h1>Tourism</h1>
