--- a/index.html
+++ b/index.html
@@ -3,9 +3,56 @@
 	<head>
 		<title>LSG</title>
 		<link type="text/css" rel="stylesheet" href="css/bootstrap.css"/>
+		<link type="text/css" rel="stylesheet" href="css/general.css"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+		<link href="https://fonts.googleapis.com/css?family=Sedgwick+Ave" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Coming+Soon" rel="stylesheet">
+
 	</head>
 	<body>
+		<!-- Nav bar -->
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+
+ 
+  <img src="images/logo.jpg" width="80" height="80" id="logo">
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <!-- collapse nav bar -->
+  <div class="collapse navbar-collapse" id="navbarNav">
+
+    <ul class="navbar-nav">
+      <li class="nav-item active">
+        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="html/about.html">About</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="html/guideSections/cafes.html">Cafes</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="html/guideSections/restaurants.html">Restaurants</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="html/guideSections/thingsToDo.html">Things To Do</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="html/guideSections/tourismSpots.html">Tourism Spots</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="html/guideSections/bars.html">Bars</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="html/guideSections/nightlife.html">Nightlife</a>
+      </li>
+       <li class="nav-item">
+        <a class="nav-link" href="html/help.html">Help</a>
+      </li>
+    </ul>
+  </div>
+</nav>
 		<div class="container">
 			<div class ="row">
 				<h1>Lost Student Guide</h1>
@@ -84,6 +131,14 @@
 				</div>
 			</div>
 		</div>
+
+		<!-- Copyright -->
+    <div class="footer-copyright text-center py-3">© 2018 Copyright: Lost Student Guide
+    </div>
+  
+
+		</footer>
+		
 		<script type="text/javascript" src="js/bootstrap.js"></script>
 	</body>
 </html>
