--- a/index.html
+++ b/index.html
@@ -2,88 +2,88 @@
 <html>
 	<head>
 		<title>LSG</title>
-		<link type="text/css" rel="stylesheet" href="css/bootstrap.css"/>
+		<link type="text/css" rel="stylesheet" href="css/bootstrap.min.css"/>
+		<link type="text/css" rel="stylesheet" href="css/mainStyle.css"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 	</head>
 	<body>
-		<div class="container">
-			<div class ="row">
-				<h1>Lost Student Guide</h1>
-				<h2>Welcome to the Lost Student Guide!</h2>
-				<p>There are two universities situated Belfast. Many students are new to the area and might be feeling a little lost. Have no fear, we at the lost student guide are here to help! We have selected a few locations that students might want to know about.</p>
-				<p>If there is something that you looking for more information on, or maybe you are feeling a little lost, you can get in touch with us <a href="html/contact.html">here</a> or via our <a>twitter: @lostStudentGuide</a> or visit our <a href="html/help.html">help page</a></p>
-			</div>
-			<div class ="row">
-				<div id="carouselIndicators" class="carousel slide" data-ride="carousel">
-					<ol class="carousel-indicators">
-						<li data-target="#carouselIndicators" data-slide-to="0" class="active"></li>
-						<li data-target="#carouselIndicators" data-slide-to="1" class=""></li>
-						<li data-target="#carouselIndicators" data-slide-to="2" class=""></li>
-						<li data-target="#carouselIndicators" data-slide-to="3" class=""></li>
-						<li data-target="#carouselIndicators" data-slide-to="4" class=""></li>
-						<li data-target="#carouselIndicators" data-slide-to="5" class=""></li>
-					</ol>
-					<div class="carousel-inner">
-						<div class="carousel-item active">
-							<div class="card" style="width: 60rem;">
-								<img class="card-img-top" src="images/fratelli-belfast.jpg" alt="Image of a restaurant">
-								<div class="card-body">
-									<h3 class="card-text">Restaurants</h3>
-								</div>
-							</div>			
-						</div>
-						<div class="carousel-item ">
-							<div class="card" style="width: 60rem;">
-								<img class="card-img-top" src="images/cafe-parisien.jpg" alt="Image of a restaurant">
-								<div class="card-body">
-									<h3 class="card-text">Cafes</h3>
+		<div class="container-fluid ">
+			<main class="col-12 col-md-9 col-xl-8 py-md-3 pl-md-5" role="main">				
+				<div class ="container">
+					<h1>Lost Student Guide</h1>
+					<h2>Welcome to the Lost Student Guide!</h2>
+					<p>There are two universities situated Belfast. Many students are new to the area and might be feeling a little lost. Have no fear, we at the lost student guide are here to help! We have selected a few locations that students might want to know about.</p>
+					<p>If there is something that you looking for more information on, or maybe you are feeling a little lost, you can get in touch with us <a href="html/contact.html">here</a> or via our <a>twitter: @lostStudentGuide</a> or visit our <a href="html/help.html">help page</a></p>
+				</div>
+				<div class ="container">
+					<div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+						<ol class="carousel-indicators">
+						<li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+						<li data-target="#carouselExampleCaptions" data-slide-to="1" class=""></li>
+						<li data-target="#carouselExampleCaptions" data-slide-to="2" class=""></li>
+						<li data-target="#carouselExampleCaptions" data-slide-to="3" class=""></li>
+						<li data-target="#carouselExampleCaptions" data-slide-to="4" class=""></li>
+						<li data-target="#carouselExampleCaptions" data-slide-to="5" class=""></li>
+						</ol>
+						<div class="carousel-inner">
+							<div class="carousel-item active">
+								<a href="html/guideSections/restaurants.html"><img class="d-block w-100"  alt="Image of a restaurant" src="images/fratelli-belfast.jpg"></a>
+								<div class="carousel-caption d-none d-md-block">
+									<h3>Restaurants</h3>
+									<p><a href="html/guideSections/restaurants.html" style="color:white">Click here to find out about restuarants in Belfast</a></p>
 								</div>
 							</div>
-						</div>
-						<div class="carousel-item">
-							<div class="card" style="width: 60rem;">
-								<img class="card-img-top" src="images/filthy-mcnastys.jpg" alt="Image of a restaurant">
-								<div class="card-body">
-									<h3 class="card-text">Bars</h3>
-								</div>
-							</div>
-						</div>
-						<div class="carousel-item">
-								<div class="card" style="width: 60rem;">
-									<img class="card-img-top" src="images/nightlife.jpg" alt="Image of a restaurant">
-									<div class="card-body">
-										<h3 class="card-text">Nightlife</h3>
-									</div>
-								</div>			
-							</div>
-							<div class="carousel-item ">
-								<div class="card" style="width: 60rem;">
-									<img class="card-img-top" src="images/concert-show.jpg" alt="Image of a restaurant">
-									<div class="card-body">
-										<h3 class="card-text">Things To Do</h3>
-									</div>
+							<div class="carousel-item"> 
+								<a href="html/guideSections/bars.html"><img class="d-block w-100" alt="Image of a bar" src="images/filthy-mcnastys.jpg"></a>
+								<div class="carousel-caption d-none d-md-block">
+									<h3>Bars</h3>
+									<p><a href="html/guideSections/bars.html" style="color:white">Click here to find out about bars in Belfast</a></p>
 								</div>
 							</div>
 							<div class="carousel-item">
-								<div class="card" style="width: 60rem;">
-									<img class="card-img-top" src="images/titanic-boat.jpg" alt="Image of a restaurant">
-									<div class="card-body">
-										<h3 class="card-text">Tourism Spots</h3>
-									</div>
+								<img class="d-block w-100" alt="Image of a cafe" src="images/cafe-parisien.jpg" >
+								<div class="carousel-caption d-none d-md-block">
+									<h3>Cafes</h3>
+									<p><a href="html/guideSections/cafes.html" style="color:white">Click here to find out about cafes in Belfast</a></Click></p>
 								</div>
 							</div>
+							<div class="carousel-item">
+									<a href="html/guideSections/nightlife.html"><img class="d-block w-100"  alt="Image of nightlife" src="images/nightlife.jpg"></a>
+								<div class="carousel-caption d-none d-md-block">
+									<h3>Nightlife</h3>
+									<p><a href="html/guideSections/nightlife.html" style="color:white"></a>Click here to find out about the nightlife in Belfast</p>
+								</div>
+							</div>
+							<div class="carousel-item">
+									<a href="html/guideSections/thingsToDo.html" style="color:white"><img class="d-block w-100" alt="Image of things to do" src="images/concert-show.jpg"></a>
+								<div class="carousel-caption d-none d-md-block">
+									<h3>Things to Do</h3>
+									<p><a href="html/guideSections/thingsToDo.html" style="color:white">Click here to find out about the things you can do in Belfast</a></p>
+								</div>
+							</div>
+							<div class="carousel-item">
+								<a href="html/guideSections/tourismSpots.html"><img class="d-block w-100" alt="Image of tourism spots" src="images/titanic-boat.jpg"></a>
+								<div class="carousel-caption d-none d-md-block">
+									<h3>Toursim Spots</h3>
+									<p><a href="html/guideSections/tourismSpots.html" style="color:white">Click here to find out about the things you can do here in Belfast and the rest of Northern Ireland</a></p>
+								</div>
+							</div>
+							</div>
+							<a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+								<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+								<span class="sr-only">Previous</span>
+							</a>
+							<a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+								<span class="carousel-control-next-icon" aria-hidden="true"></span>
+								<span class="sr-only">Next</span>
+							</a>
+						</div>
 					</div>
-					<a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-						<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-						<span class="sr-only">Previous</span>
-					</a>
-					<a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-						<span class="carousel-control-next-icon" aria-hidden="true"></span>
-						<span class="sr-only">Next</span>
-					</a>
 				</div>
-			</div>
+			</main>
 		</div>
+		<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 		<script type="text/javascript" src="js/bootstrap.js"></script>
+		<script type="text/javascript"  href="js/bootstrap.min.js"/>
 	</body>
 </html>
