Help page finished

--- a/html/help.html
+++ b/html/help.html
@@ -2,15 +2,50 @@
 <html>
 <head>
     <title>Help</title>
+    <link type="text/css" rel="stylesheet" href="../css/general.css"/>
+    <link href="https://fonts.googleapis.com/css?family=Sedgwick+Ave" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Coming+Soon" rel="stylesheet">
 </head>
 <body>
     <h1>Help</h1>
+
     <p>Starting university and moving away from home can be daunting. The important thing to remember is that you are not alone. There are people out there that can help you.</p>
+
     <h2>Mental Health Services</h2>
-    <p>List of mental health services / numbers</p>
+
+    <h3>Lifeline</h3>
+    <p>Lifeline is the Northern Ireland crisis response helpline service for people who are experiencing distress or despair. No matter what your age or where you live, if you are or someone you know is in distress or despair, Lifeline is there to help.</p>
+
+    <p>Lifeline counsellors are available 24 hours a day, seven days a week to listen and help, in confidence. Lifeline counsellors are experienced in working with trauma, suicide, self-harm, abuse, depression and anxiety. You will receive immediate help on the phone. Should you need further support they can provide a face-to-face counselling appointment in your local area within seven days.</p>
+
+    <p>Call Lifeline on <a href="tel:0800-808-800">0800 808 800</a>, all calls are free</p>
+    <p>If you're deaf &amp; hard of hearing call Lifeline's <a href="tel:18001-0808-800"> 18001 0808 808.</a> More information can be found on their <a href="http://www.lifelinehelpline.info/">website.</a></p>
+
+    <h3> Samaritans</h3>
+
+    <p>Samaritans is a 24hr helplie which offers confidential support for people experiencing feelings of distress or despair. You can contact them on <a href="tel:028-9066-4422">028 9066 4422</a> and they're available 24 hours a day. More information can be found on their <a href="https://www.samaritans.org/">website.</a></p>
+
+    <h3> CALM  </h3>
+
+    <p>CALM is the Campaign Against Living Miserably, for men aged 15 to 35. It's a leading movement against male sucide, which is the single biggest killer of men under 45 in the UK. You can contact them on <a href="tel:0800-58-58-58"> 0800 58 58 58 </a> daily between 5pm - midnight. More information can be found on their <a href="https://www.thecalmzone.net/">website.</a></p>
+
+    <h3>Mind</h3>
+
+    <p>Mind is an organisation which promotes the views and needs of people with mental health problems. You can contact them on <a href="tel:0300-123-3393"> 0300 123 3393</a> Monday to Friday between the hours of 9am to 6pm. More information can be found on their <a href="https://www.mind.org.uk/">website.</a></p>
+
     <h2>Physical Health Services</h2>
-    <p>List of physical health services / numbers</p>
+
+    <h3>Queens Health Clinic </h3>
+
+    <p>The University Health Centre at Queen's is a General practice that provides both student-focused and general National Health services. We also provide University-funded, non-NHS services, for students of Queen’s. You can contact them on <a href="tel:028-9066-4634"> 028 9066 4634.</a> More information can be found on their <a href="http://www.universityhealthcentreatqueens.co.uk/">website.</a></p>
+
+    <h3>Bradbury Medical Practice</h3>
+
+    <p>You can register for the Bradbury Medical Practice by making an appoinment and if you have a medical card, then be sure to bring that with you!  You can contact them on <a href="tel:028-9032-5820">028 9032 5820.</a> More information can be found on their <a href=" http://www.bradburymedicalpractice.com/">website.</a></p>
+
     <h2>Get In Touch</h2>
-    <p>If there is something that you looking for more information on, or maybe you are feeling a little lost, you can get in touch with us <a href="/html/contact.html">here</a> or via our <a>twitter: @lostStudentGuide</a></p>
+    
+    <p>If there is something that you looking for more information on, or maybe you are feeling a little lost, you can get in touch with us <a href="../html/contact.html">here</a> or via our <a>twitter: @lostStudentGuide</a></p>
+
 </body>
 </html>
